# ml-lab

./: .gitignore  LICENSE  README.md  setup_kernel.py
diffusers-lab/: SDXL.example.ipynb  pyproject.toml
diffusers-lab/src/diffusers_lab/: __init__.py  detailer.py  mask.py
diffusers-lab/src/diffusers_lab/conditioning/: __init__.py  compel.py
diffusers-lab/src/diffusers_lab/prompting/: __init__.py  template.py
diffusers-lab/src/diffusers_lab/prompting/templates/: common.j2
