[project]
name = "diffusers-lab"
version = "0.1.0"
description = "Jupyter helper lib for use with diffusers"
authors = [
    { name = "Chaser Huang", email = "huangkangjing@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "diffusers",
    "transformers",
    "accelerate",
    "safetensors",
    "jinja2",
    "compel",
    "spandrel",
    "peft",
]

[project.optional-dependencies]
rocm-gfx1151-runtime = [
    "torch", "torchvision", "torchaudio"
]
cu130-rel-runtime = [
    "torch", "torchvision", "torchaudio"
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
conflicts = [
    [
        { extra = "rocm-gfx1151-runtime" },
        { extra = "cu130-rel-runtime" },
    ]
]
override-dependencies = [
    "transformers >= 5.0"
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
transformers = { git = "https://github.com/huggingface/transformers" }
accelerate = { git = "https://github.com/huggingface/accelerate" }
torch = [ 
    { extra = "rocm-gfx1151-runtime", index = "therock-gfx1151" },
    { extra = "cu130-rel-runtime", index = "torch-cu130" },
]
torchvision = [
    { extra = "rocm-gfx1151-runtime", index = "therock-gfx1151" },
    { extra = "cu130-rel-runtime", index = "torch-cu130" },
]
torchaudio = [
    { extra = "rocm-gfx1151-runtime", index = "therock-gfx1151" },
    { extra = "cu130-rel-runtime", index = "torch-cu130" },
]


[[tool.uv.index]]
name = "therock-gfx1151"
url = "https://rocm.nightlies.amd.com/v2/gfx1151"

[[tool.uv.index]]
name = "torch-cu130"
url = "https://download.pytorch.org/whl/cu130"